--- a/FunctionsGraphs/MainWindow.xaml
+++ b/FunctionsGraphs/MainWindow.xaml
@@ -5,11 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FunctionsGraphs"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1020">
+        Title="MainWindow" Height="756" Width="1020">
 
-    <Grid Margin="10,10,10,10">
+    <Grid Margin="10,10,10,83">
         <Grid Name="Input" Margin="367,211,313,184" Background="White" Panel.ZIndex="1">
-
 
             <Label Content="h:" HorizontalAlignment="Left" Margin="48,28,0,0" VerticalAlignment="Top" Height="25" Width="29"/>
             <TextBox Name="H" HorizontalAlignment="Center" Margin="0,32,0,0" Text="0,01" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
@@ -28,22 +27,24 @@
 
         <Grid Name="Parameters" Margin="678,48,36,436" Background="White" Visibility="Hidden" Panel.ZIndex="1">
 
-            <Label Content="a:" HorizontalAlignment="Left" Margin="79,25,0,0" VerticalAlignment="Top" Height="24" Width="30"/>
-            <TextBox Name="Param1" HorizontalAlignment="Left" Margin="114,31,0,0" Text="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <Label Content="a:" HorizontalAlignment="Left" Margin="64,25,0,0" VerticalAlignment="Top" Height="24" Width="30"/>
+            <TextBox Name="Param1" HorizontalAlignment="Left" Margin="99,28,0,0" Text="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
-            <Label Content="b:" HorizontalAlignment="Left" Margin="79,49,0,0" VerticalAlignment="Top" Width="30" Height="23"/>
-            <TextBox Name="Param2" HorizontalAlignment="Left" Margin="114,54,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <Label Content="b:" HorizontalAlignment="Left" Margin="64,49,0,0" VerticalAlignment="Top" Width="30" Height="23"/>
+            <TextBox Name="Param2" HorizontalAlignment="Left" Margin="99,52,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
-            <Label  Content="c:" HorizontalAlignment="Left" Margin="79,71,0,0" VerticalAlignment="Top" Height="24" Width="30"/>
-            <TextBox Name="Param3" HorizontalAlignment="Left" Margin="114,77,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <Label  Content="c:" HorizontalAlignment="Left" Margin="64,71,0,0" VerticalAlignment="Top" Height="24" Width="30"/>
+            <TextBox Name="Param3" HorizontalAlignment="Left" Margin="99,75,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
-            <Button Name="ParamsBtn" Content="Нарисовать!" HorizontalAlignment="Left" Margin="34,123,0,0" VerticalAlignment="Top" Width="96" Height="24" Click="ParamsBtn_Click"/>
-            <Button Name="NewBtn" Content="Новый график" HorizontalAlignment="Left" Margin="164,123,0,0" VerticalAlignment="Top" Height="24" Width="100" Click="NewBtn_Click"/>
+            <Button Name="DrawBtn" Content="Нарисовать!" HorizontalAlignment="Left" Margin="31,123,0,0" VerticalAlignment="Top" Width="96" Height="24" Click="DrawBtn_Click"/>
+            <Button Name="NewBtn" Content="Новый график" HorizontalAlignment="Left" Margin="159,123,0,0" VerticalAlignment="Top" Height="24" Width="100" Click="NewBtn_Click"/>
 
-            <Border BorderBrush="Silver" BorderThickness="2" CornerRadius="10"></Border>
+            <Border BorderBrush="Silver" BorderThickness="2" CornerRadius="10"/>
         </Grid>
 
-        <Canvas Name="Surface" Margin="10, 10, 10, 10" Height="600" Width="960" Panel.ZIndex="0"/>
+        <Canvas Name="Surface" Margin="10, 10, 10, 10" Height="600" Width="960" Panel.ZIndex="0" MouseMove="Canvas_MouseMove"/>
 
+        <Label Name="DotX" Content="x: 0.00" HorizontalAlignment="Left" Margin="93,72,0,0" VerticalAlignment="Top" Width="155" Panel.ZIndex="1" Height="25" Background="White"/>
+        <Label Name="DotY" Content="y: 0.00" HorizontalAlignment="Left" Margin="93,97,0,0" VerticalAlignment="Top" Width="155" Panel.ZIndex="1" Height="25" Background="White"/>
     </Grid>
 </Window>
