--- a/FunctionsGraphs/MainWindow.xaml
+++ b/FunctionsGraphs/MainWindow.xaml
@@ -10,17 +10,17 @@
     <Grid Margin="10,10,10,83">
         <Grid Name="Input" Margin="367,211,313,184" Background="White" Panel.ZIndex="1">
 
-            <Label Content="h:" HorizontalAlignment="Left" Margin="48,28,0,0" VerticalAlignment="Top" Height="25" Width="29"/>
-            <TextBox Name="H" HorizontalAlignment="Center" Margin="0,32,0,0" Text="0,01" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <Label Content="Диаметр разбиения:" HorizontalAlignment="Left" Margin="29,46,0,0" VerticalAlignment="Top" Height="25" Width="126"/>
+            <TextBox Name="H" HorizontalAlignment="Left" Margin="160,50,0,0" Text="0,01" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
-            <Label Content="length:" HorizontalAlignment="Left" Margin="39,58,0,0" VerticalAlignment="Top" Height="28"/>
-            <TextBox Name="IntervalLength" HorizontalAlignment="Center" Margin="0,63,0,0" Text="10" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <Label Content="Длина интервала:" HorizontalAlignment="Left" Margin="29,76,0,0" VerticalAlignment="Top" Height="28" Width="126"/>
+            <TextBox Name="IntervalLength" HorizontalAlignment="Left" Margin="160,81,0,0" Text="10" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
-            <RadioButton Name="Parabola" Content="ax^2+bx+c" HorizontalAlignment="Center" Margin="0,118,0,0" VerticalAlignment="Top" ClickMode="Release" IsChecked="True" Checked="Parabola_Checked" Width="86"/>
-            <RadioButton Name="Sinus" Content="sin(x)" HorizontalAlignment="Center" Margin="0,138,0,0" VerticalAlignment="Top" Width="86" Checked="Sinus_Checked"/>
-            <RadioButton Name="SinusDivX" Content="sin(x)/x" HorizontalAlignment="Center" Margin="0,158,0,0" VerticalAlignment="Top" Width="86" Checked="SinusDivX_Checked"/>
+            <RadioButton Name="Parabola" Content="ax^2+bx+c" HorizontalAlignment="Center" VerticalAlignment="Center" ClickMode="Release" IsChecked="True" Checked="Parabola_Checked" Width="120"/>
+            <RadioButton Name="Sinus" Content="a*sin(2*pi*b*x + c)" HorizontalAlignment="Center" Margin="0,138,0,0" VerticalAlignment="Top" Width="120" Checked="Sinus_Checked"/>
+            <RadioButton Name="SinusDivX" Content="sin(x)/x" HorizontalAlignment="Center" Margin="0,158,0,0" VerticalAlignment="Top" Width="120" Checked="SinusDivX_Checked"/>
 
-            <Button Name="StartBtn" Content="Ввести" HorizontalAlignment="Center" Margin="0,207,0,0" VerticalAlignment="Top" Width="74" ClickMode="Release" Click="StartBtn_Click"/>
+            <Button Name="StartBtn" Content="Ввести" HorizontalAlignment="Center" Margin="0,188,0,0" VerticalAlignment="Top" Width="74" ClickMode="Release" Click="StartBtn_Click"/>
 
             <Border BorderBrush="Silver" BorderThickness="2" CornerRadius="10"/>
         </Grid>
@@ -36,8 +36,8 @@
             <Label  Content="c:" HorizontalAlignment="Left" Margin="64,71,0,0" VerticalAlignment="Top" Height="24" Width="30"/>
             <TextBox Name="Param3" HorizontalAlignment="Left" Margin="99,75,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
-            <Button Name="DrawBtn" Content="Нарисовать!" HorizontalAlignment="Left" Margin="31,123,0,0" VerticalAlignment="Top" Width="96" Height="24" Click="DrawBtn_Click"/>
-            <Button Name="NewBtn" Content="Новый график" HorizontalAlignment="Left" Margin="159,123,0,0" VerticalAlignment="Top" Height="24" Width="100" Click="NewBtn_Click"/>
+            <Button Name="DrawBtn" Content="Нарисовать!" HorizontalAlignment="Left" Margin="31,111,0,0" VerticalAlignment="Top" Width="96" Height="24" Click="DrawBtn_Click"/>
+            <Button Name="NewBtn" Content="Новый график" HorizontalAlignment="Left" Margin="159,111,0,0" VerticalAlignment="Top" Height="24" Width="100" Click="NewBtn_Click"/>
 
             <Border BorderBrush="Silver" BorderThickness="2" CornerRadius="10"/>
         </Grid>
